# ml_template

./: Makefile  build_inference.sh  docker-compose.yml  pyproject.toml
project_folder/sagemaker/: hyperparameters.json  train.py
