[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
use_parentheses = true
line_length = 120
skip = "venv"

[tool.poetry]
name = "predict_cpt_codes"
version = "0.1.0"
description = "Predicting CPT codes from clinical text"
authors = ["One Medical ML"]

[tool.poetry.dependencies]
python = "~3.7"
pandas = "0.25.3"
nltk = "^3.4.5"
scikit-learn = "^0.22.1"
tqdm = "^4.43.0"
matplotlib = "^3.1.3"
seaborn = "^0.10.0"
tensorflow = "2.1.0"
wordcloud = "^1.6.0"
uvicorn = "^0.11.3"
tensorflow-estimator = "2.1.0" #resolving an issue with tensorflow compat
sagemaker = "^1.51.3"
schema = "^0.7.1"


[tool.poetry.dev-dependencies]
dvc = {extras = ["s3"], version = "^0.87.0"}
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.761"
pre-commit = "^2.1.1"
pytest = "^5.3.5"
ipykernel = "^5.1.4"
jupyterlab = "^2.0.0"
ipython = "^7.14.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"